--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#contact" class="nav-link">Contact</a>
         </nav>
         
-        <button class="signin">Hire me</button>
+        <button class="signin">Contact me</button>
         <div class="menu-toggle">
             <i class="fas fa-bars"></i>
         </div>
@@ -38,7 +38,7 @@
                 Hibernate, HTML, CSS, JavaScript, and REST services.
             </p>
             <div class="cta-buttons">
-                <button class="hire-btn pulse">Hire me</button>
+                <button class="hire-btn pulse">Contact  me</button>
                 <button class="outline-btn">View Projects</button>
             </div>
             <div class="social-icons">
@@ -621,4 +621,5 @@ themeToggle.addEventListener('click', () => {
 });
     </script>
 </body>
+
 </html>
